[package]
name = "openworkers-runtime-quickjs"
version = "0.1.0"
edition = "2024"

[dependencies]
# QuickJS JavaScript engine
rquickjs = { version = "0.10", features = ["full-async", "parallel"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types
bytes = { version = "1.11", features = ["serde"] }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "async_test"
path = "examples/async_test.rs"

[[example]]
name = "streaming_bench"
path = "examples/streaming_bench.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "worker_benchmark"
harness = false
