[package]
name = "openworkers-runtime-quickjs"
version = "0.10.0"
edition = "2024"

[features]
actix = ["dep:actix-web", "openworkers-core/actix"]

[dependencies]

# Common types
# openworkers-core = { path = "../openworkers-core" }
openworkers-core = { git = "https://github.com/openworkers/openworkers-core", tag = "v0.10.0" }

# QuickJS JavaScript engine
rquickjs = { version = "0.10", features = ["full-async", "parallel"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types
bytes = { version = "1.11", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Streaming
futures = "0.3"
tokio-stream = "0.1"

# Optional dependencies
actix-web = { version = "4.12.0", features = ["macros"], optional = true }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "async_test"
path = "examples/async_test.rs"

[[example]]
name = "streaming_bench"
path = "examples/streaming_bench.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "generic_benchmark"
harness = false
